@@ -1,3 +1,10 @@
+2004-08-17 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* testsuite/libprometheus/usage_error: Renamed usage_error.bash.in to
+	  stderr.bash.in.
+	* testsuite/libprometheus/script_usage_err: Renamed
+	  script_usage_err.bash.in to stderr.bash.in.
+
 2004-08-16 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* testsuite/libprometheus/Makefile: Made test descriptions more useful.
